--- a/backend/views/listpersona.ejs
+++ b/backend/views/listpersona.ejs
@@ -12,14 +12,7 @@
     <% } %>
   </table>
   <hr/>
-  <table><form method="post" enctype="multipart/form-data">
-       
-    <tr><td>Nome</td><td><input type="text" name='nome' value=""></input ></td></tr>
-    <tr><td>Cognome</td><td><input type="text" name='cognome' value=""></input ></td></tr>
-    <tr><td>Codice Fiscale</td><td><input type="text" name='CF' value=""></input ></td></tr>
-    <tr><td>DataNascita</td><td><input type="text" name='date' value=""></input ></td></tr>
-    <tr><td>Tessera Sanitaria</td><td><input type="file" name='TS' value=""></input ></td></tr>
-    <tr><td><input type="submit" value='Aggiungi Nuova Persona'></input ></td></tr>
-    </form>
+  <a href="/persona/crea">Clicca Qui per creare nuove Persone...</a>
+ 
 
 </body></html>
