--- a/backend/views/listpersona.ejs
+++ b/backend/views/listpersona.ejs
@@ -8,7 +8,7 @@
            <td><%= lista[i].cognome %></td>
            <td><%=lista[i].CodFis %></td>
            <td><%=lista[i].date %></td>
-           <td><%=lista[i].TS %></td></tr>
+           <td><img src='/<%=lista[i].TS %>'/></td></tr>
     <% } %>
   </table>
   <hr/>
