lezione di giovedi 14.04

--- a/studenti/Ousema/backend-Ousema/views/listprenotazione.ejs
+++ b/studenti/Ousema/backend-Ousema/views/listprenotazione.ejs
@@ -6,8 +6,7 @@
     <% for (var i = 0; i < lista.length; i++) { %>
        <tr><td><%= lista[i].persID %></td>
            <td><%= lista[i].sommID %></td>
-           <td><%=lista[i].slot %></td>
-           <td><%=lista[i].postazione %></td>
+           <td><%=lista[i].postID %></td>
     <% } %>
   </table>
   <hr/>
