--- a/backend/views/viewpostazione.ejs
+++ b/backend/views/viewpostazione.ejs
@@ -30,6 +30,7 @@
     <tr><td>Tessera Sanitaria</td><td><img src="/<%=TS %>"></input ></td></tr>
 <!--    <tr><td><button type="submit" value='Salva' onclick="<%- FunzionedaChiamare %>">Salva</button ></td></tr> -->
   </table>
+  <a href="/prenotazione/<%-  id  %>/mod">Modifica Prenotazione...</a>
 
 
 </body></html>
